Profile-Page.js: modified material mui styling on components (buttons, textareas fields, input, etc) ; added logo ; massive research and experimenting with figuring out how to modify the input/browser default button-- because it was a automatic systematic button there was no way to actually change the style, so I completely erased it from the page (it is invisible/completely gone) and hardcoded a new button that reflects the other two, frontend handler functionality works was able to attach to new code; modified the images so they do not scrunch when uploaded ; textfields are expanded so no overlapping occurs ( birthdate field looks much better ) also updated color to dark brown to follow ui/ux colorways and for accessibility purposes ;  deleted like/dislike buttons-- they had no functionality and like/dislikes are implemented on matching page ... Profile-Page.jsx: preparing to fix page. ... Home-Page.css: deleted global style css ... Profile-Page-Creation.css: created a completely new css file to help with stylizing the profile page... this was a beast to do, it was a lot. ... Deleted Profile-Page.css and profileStyles.css had no code and css was never actually used/linked properly for the user profile page.

--- a/src/components/css/Home-Page.css
+++ b/src/components/css/Home-Page.css
@@ -45,28 +45,6 @@ html, body {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
  }
 
-.logo-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px;
-}
-
-.logo-container img {
-    width: 100px;
-    height: auto;
-    position: relative;
-    z-index: 1;
-}
-
-.logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 50px;
-    width: 50px;
-}
-
 footer {
     position: absolute;
     bottom: 0;
